--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TelegramSettings": {
+    "AppId": 22246669,
+    "AppH ": "5077609944b128a707af34922df55028",
+    "BotToken": "7358304134:AAEsNrhGPUSXJ9tDlKA7GgHNvNOr362-FG0"
+  },
   "AllowedHosts": "*"
 }
