--- a/src/Web/Configurations/appsettings.json
+++ b/src/Web/Configurations/appsettings.json
@@ -7,7 +7,8 @@
   },
   "TelegramSettings": {
     "AppId": 22246669,
-    "BotToken": "7358304134:AAEsNrhGPUSXJ9tDlKA7GgHNvNOr362-FG0",
+    //"BotToken": "7358304134:AAEsNrhGPUSXJ9tDlKA7GgHNvNOr362-FG0",
+    "BotToken": "6401100360:AAGbOLxtw7o_HxQPjnYgMP-x_v5luG4bvTc",
     "AppHash": "5077609944b128a707af34922df55028"
   },
   "AllowedHosts": "*"
