--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Migrations\Postgres\Postgres.csproj" />
   </ItemGroup>
 
   <ItemGroup>
